k8s/01-demo-init/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo
spec:
  type: ClusterIP  # 内部服务类型
  selector:
    app: nginx-demo  # 关联 Deployment 的 Pod 标签
  ports:
    - protocol: TCP
      port: 80       # 服务端口
      targetPort: 80 # 容器端口
